Fixed squished product grid.

--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -417,11 +417,6 @@ textarea {
     -ms-flex-direction: column;
     -webkit-flex-direction: column;
     flex-direction: column;
-    -webkit-box-flex: 0;
-    -moz-box-flex: 0;
-    -ms-flex: 0 0 50%;
-    -webkit-flex: 0 0 50%;
-    flex: 0 0 50%;
 }
 
 .c--list .c-product__link {
